[gd_scene load_steps=30 format=2]

[ext_resource path="res://Art/BackgroundObjects/Door3.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Door.gd" type="Script" id=2]
[ext_resource path="res://Art/BackgroundObjects/DoorOpen.png" type="Texture" id=3]
[ext_resource path="res://Audio/doorunlockandopen.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Scientist.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), ExtResource( 1 ) ],
"loop": false,
"name": "closeAnimation",
"speed": 13.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "closed",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "open",
"speed": 13.0
} ]

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Scientist:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 87, 40 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "fired_l"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Scientist:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 4.7, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -60, 40 ), Vector2( 85, 40 ), Vector2( 85, 40 ), Vector2( -60, 40 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Scientist")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2.5, 2.8, 4.2, 4.5, 4.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "FaceRight"
}, {
"args": [ "walk" ],
"method": "SetAnimation"
}, {
"args": [ "idle" ],
"method": "SetAnimation"
}, {
"args": [  ],
"method": "ToggleText"
}, {
"args": [  ],
"method": "ToggleText"
}, {
"args": [  ],
"method": "FaceLeft"
}, {
"args": [ "walk" ],
"method": "SetAnimation"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 5.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "OnCutsceneEnd"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "OnCutsceneStart"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "fired_r"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Scientist:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 4.7, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 87, 40 ), Vector2( -60, 40 ), Vector2( -60, 40 ), Vector2( 87, 40 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Scientist")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2.5, 2.8, 4.2, 4.5, 4.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "FaceLeft"
}, {
"args": [ "walk" ],
"method": "SetAnimation"
}, {
"args": [ "idle" ],
"method": "SetAnimation"
}, {
"args": [  ],
"method": "ToggleText"
}, {
"args": [  ],
"method": "ToggleText"
}, {
"args": [  ],
"method": "FaceRight"
}, {
"args": [ "walk" ],
"method": "SetAnimation"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 5.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "OnCutsceneEnd"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "OnCutsceneStart"
} ]
}

[sub_resource type="Animation" id=16]
resource_name = "win"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Scientist:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 4.7, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 87, 40 ), Vector2( -60, 40 ), Vector2( -60, 40 ), Vector2( 87, 40 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Scientist")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2.5, 2.8, 4.2, 4.5, 4.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "FaceLeft"
}, {
"args": [ "walk" ],
"method": "SetAnimation"
}, {
"args": [ "idle" ],
"method": "SetAnimation"
}, {
"args": [  ],
"method": "ToggleTextWin"
}, {
"args": [  ],
"method": "ToggleTextWin"
}, {
"args": [  ],
"method": "FaceRight"
}, {
"args": [ "walk" ],
"method": "SetAnimation"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 6.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "OnCutsceneEndWin"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "OnCutsceneStart"
} ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 32 )

[node name="Door" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
animation = "closeAnimation"
frame = 8
playing = true
centered = false

[node name="Scientist" parent="." instance=ExtResource( 5 )]
position = Vector2( 87, 40 )

[node name="CutscenePlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
anims/fired_l = SubResource( 15 )
anims/fired_r = SubResource( 14 )
anims/win = SubResource( 16 )

[node name="Collision" type="KinematicBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2( 16, 32 )
shape = SubResource( 1 )

[node name="LevelCompleteTriggerL" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelCompleteTriggerL"]
position = Vector2( -35.5, 32 )
shape = SubResource( 2 )

[node name="LevelCompleteTriggerR" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelCompleteTriggerR"]
position = Vector2( 60.5, 32 )
shape = SubResource( 2 )

[node name="OpenSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AnimationDelay" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[connection signal="body_entered" from="LevelCompleteTriggerL" to="." method="_on_LevelCompleteTriggerL_body_entered"]
[connection signal="body_entered" from="LevelCompleteTriggerR" to="." method="_on_LevelCompleteTriggerR_body_entered"]
[connection signal="timeout" from="AnimationDelay" to="." method="_on_AnimationDelay_timeout"]
